parser.output
Terminals unused in grammar

    OP1
    OP2
    LOP1
    LOP2


Grammar

    0 $accept: lines $end

    1 lines: lines line
    2      | line

    3 line: lterm NL
    4     | stmt NL
    5     | error

    6 stmt: QUIT
    7     | SYMBOL
    8     | TRACEF
    9     | VERBOSEF
   10     | SETLOOPS NUM
   11     | SETFIRES NUM
   12     | WRITE PATH
   13     | USELIB PATH
   14     | XCALL '(' ID ')' '(' PATH ')'
   15     | XCALL '(' ID ')' '(' NUM ')'
   16     | DEF ID EQ lterm
   17     | SETDIR PATH
   18     | STATUS
   19     | HELP
   20     | GMLGRAPH

   21 lterm: LAMBDA ID '.' lterm
   22      | '(' lterm ')' lterm
   23      | ID
   24      | NUM
   25      | BOOLEAN
   26      | F1ARG '(' lterm ')'
   27      | F2ARG '(' lterm ',' lterm ')'
   28      | XFUNCTION '(' ID ')' '(' lterm ')'
   29      | XFUNCTION '(' ID ')' '(' lterm ',' lterm ')'
   30      | IF lterm THEN lterm ELSE lterm
   31      | LET ID EQ lterm INN lterm
   32      | REC ID INN lterm


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 15 22 26 27 28 29
    ')' (41) 14 15 22 26 27 28 29
    ',' (44) 27 29
    '.' (46) 21
    error (256) 5
    HELP <intero> (258) 19
    TRACEF <intero> (259) 8
    VERBOSEF <intero> (260) 9
    USELIB <intero> (261) 13
    QUIT <intero> (262) 6
    WRITE <intero> (263) 12
    SETDIR <intero> (264) 17
    SETLOOPS <intero> (265) 10
    SETFIRES <intero> (266) 11
    STATUS <intero> (267) 18
    SYMBOL <intero> (268) 7
    REC <intero> (269) 32
    DEF <intero> (270) 16
    IF <intero> (271) 30
    THEN <intero> (272) 30
    ELSE <intero> (273) 30
    GMLGRAPH <intero> (274) 20
    NL <number> (275) 3 4
    EQ <number> (276) 16 31
    LAMBDA <number> (277) 21
    OP1 <string> (278)
    OP2 <string> (279)
    ID <string> (280) 14 15 16 21 23 28 29 31 32
    LOP1 <string> (281)
    LOP2 <string> (282)
    NUM <string> (283) 10 11 15 24
    BOOLEAN <string> (284) 25
    F1ARG <string> (285) 26
    F2ARG <string> (286) 27
    XFUNCTION <string> (287) 28 29
    LET <string> (288) 31
    INN <string> (289) 31 32
    PATH <string> (290) 12 13 14 17
    XCALL <string> (291) 14 15


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    lines (42)
        on left: 1 2
        on right: 0 1
    line (43)
        on left: 3 4 5
        on right: 1 2
    stmt <intero> (44)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 4
    lterm <grafo> (45)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 3 16 21 22 26 27 28 29 30 31 32


State 0

    0 $accept: . lines $end

    error      shift, and go to state 1
    HELP       shift, and go to state 2
    TRACEF     shift, and go to state 3
    VERBOSEF   shift, and go to state 4
    USELIB     shift, and go to state 5
    QUIT       shift, and go to state 6
    WRITE      shift, and go to state 7
    SETDIR     shift, and go to state 8
    SETLOOPS   shift, and go to state 9
    SETFIRES   shift, and go to state 10
    STATUS     shift, and go to state 11
    SYMBOL     shift, and go to state 12
    REC        shift, and go to state 13
    DEF        shift, and go to state 14
    IF         shift, and go to state 15
    GMLGRAPH   shift, and go to state 16
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    XCALL      shift, and go to state 25
    '('        shift, and go to state 26

    lines  go to state 27
    line   go to state 28
    stmt   go to state 29
    lterm  go to state 30


State 1

    5 line: error .

    $default  reduce using rule 5 (line)


State 2

   19 stmt: HELP .

    $default  reduce using rule 19 (stmt)


State 3

    8 stmt: TRACEF .

    $default  reduce using rule 8 (stmt)


State 4

    9 stmt: VERBOSEF .

    $default  reduce using rule 9 (stmt)


State 5

   13 stmt: USELIB . PATH

    PATH  shift, and go to state 31


State 6

    6 stmt: QUIT .

    $default  reduce using rule 6 (stmt)


State 7

   12 stmt: WRITE . PATH

    PATH  shift, and go to state 32


State 8

   17 stmt: SETDIR . PATH

    PATH  shift, and go to state 33


State 9

   10 stmt: SETLOOPS . NUM

    NUM  shift, and go to state 34


State 10

   11 stmt: SETFIRES . NUM

    NUM  shift, and go to state 35


State 11

   18 stmt: STATUS .

    $default  reduce using rule 18 (stmt)


State 12

    7 stmt: SYMBOL .

    $default  reduce using rule 7 (stmt)


State 13

   32 lterm: REC . ID INN lterm

    ID  shift, and go to state 36


State 14

   16 stmt: DEF . ID EQ lterm

    ID  shift, and go to state 37


State 15

   30 lterm: IF . lterm THEN lterm ELSE lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 38


State 16

   20 stmt: GMLGRAPH .

    $default  reduce using rule 20 (stmt)


State 17

   21 lterm: LAMBDA . ID '.' lterm

    ID  shift, and go to state 39


State 18

   23 lterm: ID .

    $default  reduce using rule 23 (lterm)


State 19

   24 lterm: NUM .

    $default  reduce using rule 24 (lterm)


State 20

   25 lterm: BOOLEAN .

    $default  reduce using rule 25 (lterm)


State 21

   26 lterm: F1ARG . '(' lterm ')'

    '('  shift, and go to state 40


State 22

   27 lterm: F2ARG . '(' lterm ',' lterm ')'

    '('  shift, and go to state 41


State 23

   28 lterm: XFUNCTION . '(' ID ')' '(' lterm ')'
   29      | XFUNCTION . '(' ID ')' '(' lterm ',' lterm ')'

    '('  shift, and go to state 42


State 24

   31 lterm: LET . ID EQ lterm INN lterm

    ID  shift, and go to state 43


State 25

   14 stmt: XCALL . '(' ID ')' '(' PATH ')'
   15     | XCALL . '(' ID ')' '(' NUM ')'

    '('  shift, and go to state 44


State 26

   22 lterm: '(' . lterm ')' lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 45


State 27

    0 $accept: lines . $end
    1 lines: lines . line

    $end       shift, and go to state 46
    error      shift, and go to state 1
    HELP       shift, and go to state 2
    TRACEF     shift, and go to state 3
    VERBOSEF   shift, and go to state 4
    USELIB     shift, and go to state 5
    QUIT       shift, and go to state 6
    WRITE      shift, and go to state 7
    SETDIR     shift, and go to state 8
    SETLOOPS   shift, and go to state 9
    SETFIRES   shift, and go to state 10
    STATUS     shift, and go to state 11
    SYMBOL     shift, and go to state 12
    REC        shift, and go to state 13
    DEF        shift, and go to state 14
    IF         shift, and go to state 15
    GMLGRAPH   shift, and go to state 16
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    XCALL      shift, and go to state 25
    '('        shift, and go to state 26

    line   go to state 47
    stmt   go to state 29
    lterm  go to state 30


State 28

    2 lines: line .

    $default  reduce using rule 2 (lines)


State 29

    4 line: stmt . NL

    NL  shift, and go to state 48


State 30

    3 line: lterm . NL

    NL  shift, and go to state 49


State 31

   13 stmt: USELIB PATH .

    $default  reduce using rule 13 (stmt)


State 32

   12 stmt: WRITE PATH .

    $default  reduce using rule 12 (stmt)


State 33

   17 stmt: SETDIR PATH .

    $default  reduce using rule 17 (stmt)


State 34

   10 stmt: SETLOOPS NUM .

    $default  reduce using rule 10 (stmt)


State 35

   11 stmt: SETFIRES NUM .

    $default  reduce using rule 11 (stmt)


State 36

   32 lterm: REC ID . INN lterm

    INN  shift, and go to state 50


State 37

   16 stmt: DEF ID . EQ lterm

    EQ  shift, and go to state 51


State 38

   30 lterm: IF lterm . THEN lterm ELSE lterm

    THEN  shift, and go to state 52


State 39

   21 lterm: LAMBDA ID . '.' lterm

    '.'  shift, and go to state 53


State 40

   26 lterm: F1ARG '(' . lterm ')'

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 54


State 41

   27 lterm: F2ARG '(' . lterm ',' lterm ')'

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 55


State 42

   28 lterm: XFUNCTION '(' . ID ')' '(' lterm ')'
   29      | XFUNCTION '(' . ID ')' '(' lterm ',' lterm ')'

    ID  shift, and go to state 56


State 43

   31 lterm: LET ID . EQ lterm INN lterm

    EQ  shift, and go to state 57


State 44

   14 stmt: XCALL '(' . ID ')' '(' PATH ')'
   15     | XCALL '(' . ID ')' '(' NUM ')'

    ID  shift, and go to state 58


State 45

   22 lterm: '(' lterm . ')' lterm

    ')'  shift, and go to state 59


State 46

    0 $accept: lines $end .

    $default  accept


State 47

    1 lines: lines line .

    $default  reduce using rule 1 (lines)


State 48

    4 line: stmt NL .

    $default  reduce using rule 4 (line)


State 49

    3 line: lterm NL .

    $default  reduce using rule 3 (line)


State 50

   32 lterm: REC ID INN . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 60


State 51

   16 stmt: DEF ID EQ . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 61


State 52

   30 lterm: IF lterm THEN . lterm ELSE lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 62


State 53

   21 lterm: LAMBDA ID '.' . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 63


State 54

   26 lterm: F1ARG '(' lterm . ')'

    ')'  shift, and go to state 64


State 55

   27 lterm: F2ARG '(' lterm . ',' lterm ')'

    ','  shift, and go to state 65


State 56

   28 lterm: XFUNCTION '(' ID . ')' '(' lterm ')'
   29      | XFUNCTION '(' ID . ')' '(' lterm ',' lterm ')'

    ')'  shift, and go to state 66


State 57

   31 lterm: LET ID EQ . lterm INN lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 67


State 58

   14 stmt: XCALL '(' ID . ')' '(' PATH ')'
   15     | XCALL '(' ID . ')' '(' NUM ')'

    ')'  shift, and go to state 68


State 59

   22 lterm: '(' lterm ')' . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 69


State 60

   32 lterm: REC ID INN lterm .

    $default  reduce using rule 32 (lterm)


State 61

   16 stmt: DEF ID EQ lterm .

    $default  reduce using rule 16 (stmt)


State 62

   30 lterm: IF lterm THEN lterm . ELSE lterm

    ELSE  shift, and go to state 70


State 63

   21 lterm: LAMBDA ID '.' lterm .

    $default  reduce using rule 21 (lterm)


State 64

   26 lterm: F1ARG '(' lterm ')' .

    $default  reduce using rule 26 (lterm)


State 65

   27 lterm: F2ARG '(' lterm ',' . lterm ')'

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 71


State 66

   28 lterm: XFUNCTION '(' ID ')' . '(' lterm ')'
   29      | XFUNCTION '(' ID ')' . '(' lterm ',' lterm ')'

    '('  shift, and go to state 72


State 67

   31 lterm: LET ID EQ lterm . INN lterm

    INN  shift, and go to state 73


State 68

   14 stmt: XCALL '(' ID ')' . '(' PATH ')'
   15     | XCALL '(' ID ')' . '(' NUM ')'

    '('  shift, and go to state 74


State 69

   22 lterm: '(' lterm ')' lterm .

    $default  reduce using rule 22 (lterm)


State 70

   30 lterm: IF lterm THEN lterm ELSE . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 75


State 71

   27 lterm: F2ARG '(' lterm ',' lterm . ')'

    ')'  shift, and go to state 76


State 72

   28 lterm: XFUNCTION '(' ID ')' '(' . lterm ')'
   29      | XFUNCTION '(' ID ')' '(' . lterm ',' lterm ')'

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 77


State 73

   31 lterm: LET ID EQ lterm INN . lterm

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 78


State 74

   14 stmt: XCALL '(' ID ')' '(' . PATH ')'
   15     | XCALL '(' ID ')' '(' . NUM ')'

    NUM   shift, and go to state 79
    PATH  shift, and go to state 80


State 75

   30 lterm: IF lterm THEN lterm ELSE lterm .

    $default  reduce using rule 30 (lterm)


State 76

   27 lterm: F2ARG '(' lterm ',' lterm ')' .

    $default  reduce using rule 27 (lterm)


State 77

   28 lterm: XFUNCTION '(' ID ')' '(' lterm . ')'
   29      | XFUNCTION '(' ID ')' '(' lterm . ',' lterm ')'

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


State 78

   31 lterm: LET ID EQ lterm INN lterm .

    $default  reduce using rule 31 (lterm)


State 79

   15 stmt: XCALL '(' ID ')' '(' NUM . ')'

    ')'  shift, and go to state 83


State 80

   14 stmt: XCALL '(' ID ')' '(' PATH . ')'

    ')'  shift, and go to state 84


State 81

   28 lterm: XFUNCTION '(' ID ')' '(' lterm ')' .

    $default  reduce using rule 28 (lterm)


State 82

   29 lterm: XFUNCTION '(' ID ')' '(' lterm ',' . lterm ')'

    REC        shift, and go to state 13
    IF         shift, and go to state 15
    LAMBDA     shift, and go to state 17
    ID         shift, and go to state 18
    NUM        shift, and go to state 19
    BOOLEAN    shift, and go to state 20
    F1ARG      shift, and go to state 21
    F2ARG      shift, and go to state 22
    XFUNCTION  shift, and go to state 23
    LET        shift, and go to state 24
    '('        shift, and go to state 26

    lterm  go to state 85


State 83

   15 stmt: XCALL '(' ID ')' '(' NUM ')' .

    $default  reduce using rule 15 (stmt)


State 84

   14 stmt: XCALL '(' ID ')' '(' PATH ')' .

    $default  reduce using rule 14 (stmt)


State 85

   29 lterm: XFUNCTION '(' ID ')' '(' lterm ',' lterm . ')'

    ')'  shift, and go to state 86


State 86

   29 lterm: XFUNCTION '(' ID ')' '(' lterm ',' lterm ')' .

    $default  reduce using rule 29 (lterm)
